[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/dictionary_test_scene.gd" id="1"]

[node name="DictionaryTestScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "辞書型変数テスト"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "ゲーム情報を表示中..."
vertical_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LevelUpButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "レベルアップ"
theme_override_font_sizes/font_size = 16

[node name="FriendshipButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "好感度アップ"
theme_override_font_sizes/font_size = 16

[node name="TestDictionaryButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "辞書機能テスト"
theme_override_font_sizes/font_size = 16

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "閉じる"
theme_override_font_sizes/font_size = 16

[connection signal="pressed" from="VBoxContainer/ButtonContainer/TestDictionaryButton" to="." method="_on_test_dictionary_pressed"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="close_ui"]
